Finish the unit test for transform service.